# k3s-mcp-server

./: .env.example  .gitignore  CLAUDE-DESKTOP-CONFIG.md  CLAUDE_DESKTOP_CONFIG.json  CORTEX-INTEGRATION.md  DELIVERY-SUMMARY.md  DELIVERY_MANIFEST.md  DEPLOYMENT_SUMMARY.md  Dockerfile  INSTALLATION-CHECKLIST.md  PROJECT-SUMMARY.md  QUICKSTART.md  README.md  claude-config-example.json  pyproject.toml  setup.sh  test-connection.sh
.github/workflows/: docker-build-push.yml
docs/: ARCHITECTURE.md
k3s_mcp_server/: __init__.py  server.py
src/k3s_mcp_server/: __init__.py  server.py
