[project]
name = "k3s-mcp-server"
version = "1.0.0"
description = "MCP server for managing Kubernetes (K3s) clusters with AI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ry-ops", email = ""},
]
keywords = [
    "mcp",
    "kubernetes",
    "k3s",
    "model-context-protocol",
    "claude",
    "ai",
    "devops",
    "infrastructure",
    "automation",
    "container-orchestration",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.0.0",
    "kubernetes>=29.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/ry-ops/k3s-mcp-server"
Documentation = "https://github.com/ry-ops/k3s-mcp-server#readme"
Repository = "https://github.com/ry-ops/k3s-mcp-server"
Issues = "https://github.com/ry-ops/k3s-mcp-server/issues"

[project.scripts]
k3s-mcp-server = "k3s_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/k3s_mcp_server"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=k3s_mcp_server",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"
